--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2"
   },
