--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
